@@ -1,3 +1,4 @@
+-   Added repeated dispatch. Cut out matched trigger, then re-dispatch.
 -   Added xelerus function lookup
 -   Added fact list command
 -   Added ping command
